# for display continuity sake please use 2 spaces instead of tabs
2015-03-22 Giuseppe Aruta (ma15569)
   * RasterImageLayer Plugin: added Raster Layer statistics tab with several info about cell values
   * DEMStaristics: added header with the number of selected raster layers
   
2015-03-22 Giuseppe Aruta (ma15569) 
   * SaveRasterImageAsImagePlugIn. Rewrite class using new RasterImage I/O components
     This version allows to export no nodata cell value to the output tif
   * RasterImage nodata management plugins: added layer statistics resume panel and
     an output file chooser field

2015-03-22 mmichaud <m.michael.michaud@orange.fr>
  * Hide unused AttributeType from the schema.
    Add a way to nullify attribute values in the Attribute panel :
    - String and boolean : press left button, and click on null menu item
    before releasing
    - Date and numerics : just empty the field
  *  Fix a regression in kml driver introduced by a change in OJ API

2015-03-15 Giuseppe Aruta (ma15569) 
  * Add RasterImageIOUtils.class, with various methods to perform
    some raster image  Input/Output operations

2015-03-14 mmichaud <m.michael.michaud@orange.fr>
  * Manage new attribute types BOOLEAN and LONG in jml and shp drivers
    (also manage other datatypes so that they can be written as one
    of the well-known datatype instead of throwing an error message)

2015-02-28 mmichaud <m.michael.michaud@orange.fr>
  * FR 215 : don't open a new ViewAttributesFrame if there is already one
    open for the selected layer Layer

2015-02-28 mmichaud <m.michael.michaud@orange.fr>
  * Fix bug #388 shrinking columns in infoFrame and attributeTable
    when the schema has changed.

2015_02_22 Giuseppe Aruta (ma15569) 
	- Add 2 new plugin to manage nodata values on monoband DEM
		a) Change No Data Value: it changes default nodata value of file
		b) Set input value to no dta;: it changes an arbitrary cell value to
		   default nodata

2015_02_22 Giuseppe Aruta (ma15569) 